fixed padding on mobile and desktop

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html {
     background-image: linear-gradient(315deg, #090947 0%, #5a585a 74%);
     color: rgb(229, 234, 241);
     padding: 30px 0px 30px 0px;
+	
 }
 
 body {
@@ -186,8 +187,13 @@ table tr td:last-child {
 
     .cell {
         height: 130px;
-        width: 80px;
+        width: 50px;
     }
+
+	#page2 div {
+		padding-left: 0px;
+		padding-right: 0px;
+	}
     
 
     h1 {
@@ -205,8 +211,3 @@ table tr td:last-child {
 
 }
 
-@media only screen and (min-device-height: 1200px) {
-    html {
-        height: 100vh;
-    }
-}
